After saving or editing an order redirect to the order review.

--- a/Thermory.Web/Views/PurchaseOrder/Form.cshtml
+++ b/Thermory.Web/Views/PurchaseOrder/Form.cshtml
@@ -102,7 +102,7 @@
             dataType: 'json',
             data: postData,
             success: function (data, status, request) {
-                window.location = ('@Url.Action("Index", "PurchaseOrder")');
+                window.location = ('/PurchaseOrder/Review/' + data);
             },
             error: function (data, status, request) {
                 $('#errorMessage').text(data.responseText);
