Adder order status to order. Improved navigation link style.

--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -28,18 +28,23 @@
                 </section>
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <nav>
-                        <ul id="menu">
-                            @if (User.IsInRole(Role.InventoryMaster))
-                            {
-                                <li role="presentation">@Html.ActionLink("Inventory", "Index", "Inventory")</li>
-                                <li role="presentation">@Html.ActionLink("Incoming ", "Index", "PurchaseOrder")</li>
-                                <li role="presentation">@Html.ActionLink("Sales Orders", "Index", "SalesOrder")</li>
-                                <li role="presentation">@Html.ActionLink("Inventory Audit", "Audit", "Inventory")</li>
-                                <li role="presentation">@Html.ActionLink("Catalog", "Index", "Catalog")</li>
-                                <li role="presentation">@Html.ActionLink("Users", "Index", "User")</li>
-                            }
-                        </ul>
+                    <nav class="navbar navbar-default">
+                        <div class="container-fluid">
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav">
+                                    @if (User.IsInRole(Role.InventoryMaster))
+                                    {
+                                        <li role="presentation">@Html.ActionLink("Inventory", "Index", "Inventory")</li>
+                                        <li role="presentation">@Html.ActionLink("Incoming ", "Index", "PurchaseOrder")</li>
+                                        <li role="presentation">@Html.ActionLink("Sales Orders", "Index", "SalesOrder")</li>
+                                        <li role="presentation">@Html.ActionLink("Inventory Audit", "Audit", "Inventory")</li>
+                                        <li role="presentation">@Html.ActionLink("Catalog", "Index", "Catalog")</li>
+                                        <li role="presentation">@Html.ActionLink("Users", "Index", "User")</li>
+                                    }
+                                </ul>
+                            </div>
+                        </div>
                     </nav>
                 }
             </div>
